# edu-project-mlops-course

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  infer.py  pyproject.toml  tmp.py  train.py
.dvc/: config
configs/: main_conf.yaml  train_conf.yaml
configs/files/: dataset_files.yaml
data/: .gitignore  newsgroups_test.dvc  newsgroups_train.dvc
ds_project/: models.py  runner.py
models/: .gitignore  catboost_model_1.cbm.dvc
news_classification/: dataset.py  load_data.py  vectorization.py
notebooks/: .gitignore  newsgroups_classification.ipynb  newsgroups_classification.ipynb.dvc
