[tool.poetry]
name = "edu-project-mlops-course"
version = "0.1.0"
description = "Educational project for the applied mlops master's course"
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "edu_project_mlops_course"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
wordcloud = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
