[tool.poetry]
name = "edu-project-mlops-course"
version = "0.1.0"
description = "Educational project for the applied mlops master's course"
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
dvc-gdrive = "^3.0.1"
hydra-core = "^1.3.2"
mlflow = "^2.9.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
wordcloud = "^1.9.3"
pre-commit = "^3.6.0"
dvc = "^3.38.1"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
